# MPSO_pro

./: .gitignore  CMakeLists.txt  LICENSE
include/mpso/common/: binary_io.h  cuckoo_layout.h  network.h  offline_paths.h  parameters.h  permutation.h  runtime.h  types.h
include/mpso/preproc/: beaver_triple_generator.h  bool_triple_generator.h  offline_generator.h  preproc_common.h  random_ot_generator.h  vole_generator.h
include/mpso/proto/: mpsi.h  mpsu.h  offline_paths.h  pmt.h  proto_common.h  random_ot.h
include/mpso/shuffle/: online_shuffle.h  shuffle_common.h  shuffle_correlation.h  shuffle_types.h
src/common/: network.cpp  permutation.cpp
src/preproc/: beaver_triple_generator.cpp  bool_triple_generator.cpp  offline_generator.cpp  random_ot_generator.cpp  vole_generator.cpp
src/proto/: mpsi.cpp  mpsu.cpp  pmt.cpp  random_ot.cpp
src/shuffle/: online_shuffle.cpp  shuffle_correlation.cpp
test/: test_mpsi.cpp  test_mpsic.cpp  test_mpsics.cpp  test_mpsu.cpp
